# agent-memory-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  embeddings.py  main.py  models.py  schemas.py  services.py  vectordb.py  worker.py
docs/: test-log.md
tests/: test_api_memories.py  test_api_search.py  test_api_tasks.py  test_embeddings.py  test_memory_service.py  test_outbox_claim.py  test_outbox_retry.py  test_worker.py
