[project]
name = "agent-memory-backend"
version = "0.1.0"
description = "Small memory backend with FastAPI, MySQL outbox, worker, and Qdrant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "qdrant-client>=1.9,<1.11",
  "pymysql>=1.1,<2.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
